--- a/src/App.css
+++ b/src/App.css
@@ -5,17 +5,12 @@
   text-align: center;
 }
 
+body {
+  height: 100vh;
+  max-width: 100vh;
+}
+
 .stats {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-#cpsId {
-  font-size: 1.25rem;
-}
-
-.buttonsBox {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -33,12 +28,12 @@
 }
 
 .upgrades {
-  max-width: 1000px;
   display: flex;
+  width: 80vw;
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  font-size: 1.5rem;
+  font-size: 1rem;
   border-bottom: 2px solid #2d1010;
   margin: 5px 250px;
 }
