--- a/src/App.css
+++ b/src/App.css
@@ -7,20 +7,16 @@
 
 body {
   height: 100vh;
-  max-width: 100vh;
-}
-
-.stats {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  margin: 0;
+  padding: 0;
 }
 
 .cookieStats {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  font-size: 1.5rem;
+  flex-direction: column;
+  font-size: 1rem;
 }
 
 .cookieStats > img {
@@ -35,7 +31,16 @@ body {
   padding: 10px;
   font-size: 1rem;
   border-bottom: 2px solid #2d1010;
-  margin: 5px 250px;
+  margin: 5px auto;
+}
+
+@media (min-width: 800px) {
+  .upgrades {
+    width: 100vw;
+  }
+  .cookieStats {
+    font-size: 2rem;
+  }
 }
 
 #errorMessage {
