--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 #root {
   max-width: 1280px;
-  margin: 0 auto;
+  margin: 0;
   padding: 2rem;
   text-align: center;
 }
@@ -31,7 +31,7 @@ body {
   padding: 10px;
   font-size: 1rem;
   border-bottom: 2px solid #2d1010;
-  margin: 5px auto;
+  margin: 5px;
 }
 
 @media (min-width: 800px) {
